Add default config parameters for database log

--- a/config.json
+++ b/config.json
@@ -22,7 +22,9 @@
 		"poolIdleTimeout": 30000,
 		"reapIntervalMillis": 1000,
 		"logEvents": ["error"],
-		"logFileName": "logs/lisk_db.log"
+		"logFileName": "logs/lisk_db.log",
+		"fileLogLevel": "error",
+		"consoleLogLevel": "error"
 	},
 	"redis": {
 		"host": "127.0.0.1",
